Fixed: responsive bahavior on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1118,13 +1118,13 @@ body.noScroll, html.noScroll {
         padding: 0 20px
     }
     .hand {
-        width: 483px;
-        height: 552px;
-        background-size: 100% auto
+        width: 367px;
+        height: 502px;
+        background-size: 100% auto;
     }
     .mobile_apps_holder {
-        top: 66px;
-        left: 50px;
+        top: 53px;
+        left: 63px;
         width: 198px;
         height: 365px
     }
